# ict-solutions

./: .gitignore  README.md  meson.build  meson_options.txt  run.py
acmp/: 183.py  268.cpp  523.cpp  666.py  meson.build  readme.md
acmp/100/: main.go
archive/: meson.build  readme.md
archive/informatics/: 114927.cpp  2782.cpp
archive/mosh_ict_2025/: 7.cpp  meson.build  readme.md
archive/municip2/: B.py  D.py  readme.md
archive/other/: readme.md
archive/tbank_otbor_2025/: 1B.cpp  1C.cpp  1D.cpp  1E.cpp  1F.cpp  2A.cpp
codeforces/: fibonacci_army.cpp  heist.cpp  hit_the_lottery.cpp  maximum_increase.cpp  meson.build  qaq.cpp  sum_of_cubes.cpp  sushi_for_two.cpp  thorns_and_coins.cpp  yarik_and_array.py
informatics/: 1.cpp  111403.cpp  111540.cpp  111541.cpp  111728.cpp  111734.cpp  1128.cpp  113643.py  113652.cpp  113653.cpp  113654.cpp  113655.cpp  113656.cpp  113657.cpp  113658.cpp  113659.cpp  113706.cpp  114218.py  114432.py  114433.py  114566.cpp  114925.cpp  114926.cpp  114927.cpp  114927_b.cpp  114934.cpp  114936.cpp  114937.cpp  114938.cpp  1406.cpp  1425.cpp  1426.cpp  1427.cpp  1429.cpp  1440.cpp  1447.cpp  1472.cpp  157.cpp  1570.cpp  1572.cpp  (+77 more)
informatics/913/: main.go
kompege/: readme.md
kompege/6926/: readme.md  test.txt
leetcode/: 1.go  2.go  20.py  26.py  27.py  7.c  8.c  meson.build
leetcode/10/: main.go
leetcode/11/: main.go
leetcode/12/: main.go
leetcode/13/: main.go
leetcode/14/: main.go
leetcode/15/: main.go
leetcode/21/: main.go
leetcode/3/: main.go
leetcode/4/: main.go
leetcode/5/: main.go
leetcode/50/: main.go
leetcode/6/: main.go
leetcode/9/: main.go
mosh_ict_2025/: 1.cpp  2.cpp  2.py  5.cpp  7.cpp  meson.build  readme.md
municip2/: B.py
other/: 6274.cr  readme.md
other/14_11.hell/: 3.py
other/cw_12.12/: readme.md
other/cw_28.11/: readme.md
other/hard_14.11/: 1.go  4.py
other/hw_27.11/: readme.md
other/itmo_28.11/: 3.txt  readme.md
other/op_25_sp_1/: E.cpp  F.py  K.py  L.cpp
other/solution_6274/: 6274.cpp
solutions/: 114559.cpp  114931.cpp  114933.cpp  1323.cpp  1324.cpp  1571.cpp  1582.cpp  1583.cpp  1586.cpp  1620.cpp  174.go  175.cpp  207.py  2796.cpp  2963.py  2968.cpp  460.cpp  467.cpp  623.cpp  672.cpp  914.py
tbank_otbor_2025/: 1A.cpp  2A.cpp  meson.build
timus/: 1009.cpp  1012.cpp  1012.py  1013.py  1225.cpp  1327.cpp  1404.cpp  1493.cpp  1607.cpp  meson.build
yandex_training/: meson.build
yandex_training/1_5/: A.c  B.cpp  meson.build
yandex_training/1_6/: B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.py  H.cpp  meson.build
yandex_training/1_7/: A.py  B.py  C.py  D.cpp  D.py  E.py  F.cpp  F.py  (+1 more)
(+38 files in other folders)
