sources = [
  '1.cpp',
  '2.cpp',
  '3.cpp',
  '4.cpp',
  '99.cpp',
  '160.cpp',
  '161.cpp',
  '162.cpp',
  '163.cpp',
  '164.cpp',
  '165.cpp',
  '168.cpp',
  '175.cpp',
  '204.cpp',
  '225.cpp',
  '460.cpp',
  '461.cpp',
  '462.cpp',
  '463.cpp',
  '464.cpp',
  '465.cpp',
  '466.cpp',
  '467.cpp',
  '474.cpp',
  '476.cpp',
  '479.cpp',
  '490.cpp',
  '623.cpp',
  '629.cpp',
  '652.cpp',
  '672.cpp',
  '912.cpp',
  '913.cpp',
  '915.cpp',
  '943.cpp',
  '1323.cpp',
  '1324.cpp',
  '1406.cpp',
  '1425.cpp',
  '1426.cpp',
  '1427.cpp',
  '1429.cpp',
  '1472.cpp',
  '1570.cpp',
  '1571.cpp',
  '1572.cpp',
  '1582.cpp',
  '1583.cpp',
  '1584.cpp',
  '1586.cpp',
  '1620.cpp',
  '1790.cpp',
  '1923.cpp',
  '2001.cpp',
  '2796.cpp',
  '2797.cpp',
  '2964.cpp',
  '2965.cpp',
  '2968.cpp',
  '3044.cpp',
  '3311.cpp',
  '3570.cpp',
  '111403.cpp',
  '111540.cpp',
  '111541.cpp',
  '111728.cpp',
  '111734.cpp',
  '114559.cpp',
  '114566.cpp',
  '114931.cpp',
  '114933.cpp',
  '114934.cpp',
  '114936.cpp',
  '114937.cpp',
  '114938.cpp',
]

foreach source : sources
  executable(fs.replace_suffix(fs.name(source), ''), source)
endforeach
